--- a/Task1-Cine-reconstruction.css
+++ b/Task1-Cine-reconstruction.css
@@ -75,7 +75,7 @@
     min-height: 570px;
   }
 }.u-section-3 .u-sheet-1 {
-  min-height: 3890px;
+  min-height: 659px;
 }
 
 .u-section-3 .u-text-1 {
@@ -89,7 +89,7 @@
 
 .u-section-3 .u-text-3 {
   line-height: 3;
-  margin: 15px 0 0;
+  margin: 17px 0 0;
 }
 
 .u-section-3 .u-btn-1 {
@@ -101,13 +101,7 @@
 .u-section-3 .u-image-1 {
   width: 830px;
   height: 229px;
-  margin: 25px auto 0;
-}
-
-.u-section-3 .u-text-4 {
-  font-size: 1rem;
-  line-height: 3;
-  margin: 15px 0 25px;
+  margin: 23px auto 25px;
 }
 
 @media (max-width: 1199px) {
@@ -118,7 +112,7 @@
 
 @media (max-width: 991px) {
   .u-section-3 .u-sheet-1 {
-    min-height: 3860px;
+    min-height: 629px;
   }
 
   .u-section-3 .u-image-1 {
@@ -129,7 +123,7 @@
 
 @media (max-width: 767px) {
   .u-section-3 .u-sheet-1 {
-    min-height: 3811px;
+    min-height: 579px;
   }
 
   .u-section-3 .u-image-1 {
@@ -140,7 +134,7 @@
 
 @media (max-width: 575px) {
   .u-section-3 .u-sheet-1 {
-    min-height: 3756px;
+    min-height: 524px;
   }
 
   .u-section-3 .u-image-1 {
@@ -148,43 +142,134 @@
     height: 94px;
   }
 }.u-section-4 .u-sheet-1 {
-  min-height: 406px;
+  min-height: 948px;
 }
 
 .u-section-4 .u-text-1 {
-  margin: 23px auto 0 0;
+  line-height: 3;
+  margin: 25px 0 0;
 }
 
 .u-section-4 .u-text-2 {
-  font-size: 1rem;
-  line-height: 3;
-  margin: 26px 0;
-} .u-section-5 {
-  background-image: none;
+  font-weight: 700;
+  font-size: 1.125rem;
+  margin: 62px 0 0;
 }
 
-.u-section-5 .u-sheet-1 {
-  min-height: 699px;
+.u-section-4 .u-image-1 {
+  height: 540px;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.u-section-4 .u-text-3 {
+  font-size: 1rem;
+  line-height: 3;
+  margin: 25px 0 0 48px;
+}
+
+.u-section-4 .u-icon-1 {
+  width: 30px;
+  height: 30px;
+  margin: -85px auto 60px 0;
+  padding: 0;
+}
+
+@media (max-width: 1199px) {
+  .u-section-4 .u-text-1 {
+    margin-top: 416px;
+  }
+
+  .u-section-4 .u-text-2 {
+    margin-top: -243px;
+  }
+
+  .u-section-4 .u-image-1 {
+    margin-top: 300px;
+    margin-bottom: 47px;
+  }
+
+  .u-section-4 .u-text-3 {
+    margin-left: 0;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-4 .u-text-2 {
+    margin-top: -307px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-4 .u-text-2 {
+    margin-top: -371px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-4 .u-text-1 {
+    margin-top: 452px;
+  }
+
+  .u-section-4 .u-text-2 {
+    margin-top: -567px;
+  }
+
+  .u-section-4 .u-image-1 {
+    margin-bottom: 11px;
+  }
+}.u-section-5 .u-sheet-1 {
+  min-height: 3032px;
 }
 
 .u-section-5 .u-text-1 {
+  font-size: 1rem;
+  line-height: 3;
+  margin: 28px 20px 28px 0;
+}
+
+@media (max-width: 1199px) {
+  .u-section-5 .u-text-1 {
+    margin-right: 0;
+  }
+}.u-section-6 .u-sheet-1 {
+  min-height: 406px;
+}
+
+.u-section-6 .u-text-1 {
+  margin: 24px auto 0 0;
+}
+
+.u-section-6 .u-text-2 {
+  font-size: 1rem;
+  line-height: 3;
+  margin: 25px 0 26px;
+} .u-section-7 {
+  background-image: none;
+}
+
+.u-section-7 .u-sheet-1 {
+  min-height: 699px;
+}
+
+.u-section-7 .u-text-1 {
   font-weight: 400;
   margin: 25px auto 0 0;
 }
 
-.u-section-5 .u-text-2 {
+.u-section-7 .u-text-2 {
   font-size: 1rem;
   line-height: 3;
   margin: 25px 0 0;
 }
 
-.u-section-5 .u-text-3 {
+.u-section-7 .u-text-3 {
   font-size: 1rem;
   font-weight: 700;
   margin: 26px auto 0;
 }
 
-.u-section-5 .u-table-1 {
+.u-section-7 .u-table-1 {
   width: 544px;
   margin: 0 auto;
 }
@@ -193,29 +278,29 @@
   height: 46px;
 }
 
-.u-section-5 .u-table-cell-1 {
+.u-section-7 .u-table-cell-1 {
   background-image: none;
   font-weight: 700;
 }
 
-.u-section-5 .u-table-cell-2 {
+.u-section-7 .u-table-cell-2 {
   background-image: none;
   font-weight: 700;
 }
 
-.u-section-5 .u-table-cell-5 {
+.u-section-7 .u-table-cell-5 {
   background-image: none;
 }
 
-.u-section-5 .u-table-cell-6 {
+.u-section-7 .u-table-cell-6 {
   background-image: none;
 }
 
-.u-section-5 .u-table-cell-9 {
+.u-section-7 .u-table-cell-9 {
   background-image: none;
 }
 
-.u-section-5 .u-table-cell-10 {
+.u-section-7 .u-table-cell-10 {
   background-image: none;
 }
 
@@ -223,30 +308,30 @@
   height: 46px;
 }
 
-.u-section-5 .u-text-4 {
+.u-section-7 .u-text-4 {
   margin: 58px auto 0 0;
 }
 
-.u-section-5 .u-text-5 {
+.u-section-7 .u-text-5 {
   font-size: 1rem;
   line-height: 1.8;
   margin: 23px 0 25px;
 }
 
-.u-section-5 .u-btn-1 {
+.u-section-7 .u-btn-1 {
   background-image: none;
   font-size: 1rem;
   padding: 0;
 }
 
 @media (max-width: 767px) {
-  .u-section-5 .u-table-1 {
+  .u-section-7 .u-table-1 {
     width: 540px;
   }
 }
 
 @media (max-width: 575px) {
-  .u-section-5 .u-table-1 {
+  .u-section-7 .u-table-1 {
     width: 340px;
   }
 }
