--- a/Challenge.css
+++ b/Challenge.css
@@ -191,6 +191,7 @@
 .u-section-4 .u-btn-1 {
   background-image: none;
   font-size: 1rem;
+  margin-top: 15px;
   padding: 0;
 }
 
@@ -209,6 +210,7 @@
 .u-section-4 .u-btn-4 {
   background-image: none;
   font-size: 1rem;
+  text-decoration: underline !important;
   padding: 0;
 }
 
@@ -216,18 +218,12 @@
   background-image: none;
   font-size: 1rem;
   padding: 0;
-}
-
-.u-section-4 .u-btn-6 {
-  background-image: none;
-  font-size: 1rem;
-  padding: 0;
 }.u-section-5 .u-sheet-1 {
-  min-height: 406px;
+  min-height: 460px;
 }
 
 .u-section-5 .u-text-1 {
-  margin: 25px auto 0 0;
+  margin: 28px auto 0 0;
 }
 
 .u-section-5 .u-text-2 {
@@ -236,10 +232,22 @@
   margin: 25px auto 0 0;
 }
 
+.u-section-5 .u-btn-1 {
+  background-image: none;
+  font-size: 1rem;
+  padding: 0;
+}
+
 .u-section-5 .u-text-3 {
   font-size: 1rem;
   line-height: 3;
-  margin: 0 auto 25px 0;
+  margin: 0 auto 28px 0;
+}
+
+@media (max-width: 1199px) {
+  .u-section-5 .u-text-3 {
+    text-decoration: none solid rgb(102, 102, 102);
+  }
 }.u-section-6 .u-sheet-1 {
   min-height: 439px;
 }
