--- a/FAQ.css
+++ b/FAQ.css
@@ -43,631 +43,766 @@
     margin-left: 0;
   }
 }.u-section-2 .u-sheet-1 {
-  min-height: 2402px;
+  min-height: 2579px;
 }
 
 .u-section-2 .u-text-1 {
+  margin: 23px auto 0 0;
+}
+
+.u-section-2 .u-list-1 {
+  margin: 13px auto 0 0;
+}
+
+.u-section-2 .u-repeater-1 {
+  min-height: 1908px;
+  grid-template-columns: 100%;
+  grid-gap: 0px 0px;
+}
+
+.u-section-2 .u-container-layout-1 {
+  padding: 10px 0 0;
+}
+
+.u-section-2 .u-text-2 {
+  margin: 25px auto 0 0;
+}
+
+.u-section-2 .u-text-3 {
+  margin: 36px 0 0;
+}
+
+.u-section-2 .u-container-layout-2 {
+  padding: 10px 0 0;
+}
+
+.u-section-2 .u-text-4 {
+  margin: 25px auto 0 0;
+}
+
+.u-section-2 .u-text-5 {
+  margin: 36px 0 0;
+}
+
+.u-section-2 .u-btn-1 {
+  background-image: none;
+  font-size: 1rem;
+  padding: 0;
+}
+
+.u-section-2 .u-container-layout-3 {
+  padding: 10px 0 0;
+}
+
+.u-section-2 .u-text-6 {
+  margin: 25px auto 0 0;
+}
+
+.u-section-2 .u-text-7 {
+  margin: 36px 0 0;
+}
+
+.u-section-2 .u-container-layout-4 {
+  padding: 10px 0 0;
+}
+
+.u-section-2 .u-text-8 {
+  margin: 25px auto 0 0;
+}
+
+.u-section-2 .u-text-9 {
+  margin: 36px 0 0;
+}
+
+.u-section-2 .u-text-10 {
+  margin: 13px auto 0 0;
+}
+
+.u-section-2 .u-text-11 {
+  margin: 23px 0 36px;
+}
+
+.u-section-2 .u-btn-2 {
+  background-image: none;
+  font-size: 1rem;
+  padding: 0;
+}
+
+.u-section-2 .u-btn-3 {
+  background-image: none;
+  font-size: 1rem;
+  padding: 0;
+}
+
+.u-section-2 .u-btn-4 {
+  background-image: none;
+  font-size: 1rem;
+  padding: 0;
+}
+
+.u-section-2 .u-btn-5 {
+  background-image: none;
+  font-size: 1rem;
+  padding: 0;
+}
+
+@media (max-width: 1199px) {
+  .u-section-2 .u-list-1 {
+    margin-right: initial;
+    margin-left: initial;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-2 .u-text-8 {
+    margin-left: -50px;
+  }
+
+  .u-section-2 .u-text-9 {
+    margin-left: -51px;
+    margin-right: -51px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-2 .u-text-2 {
+    margin-right: 0;
+  }
+
+  .u-section-2 .u-text-8 {
+    margin-left: -150px;
+  }
+
+  .u-section-2 .u-text-9 {
+    margin-left: -150px;
+    margin-right: -150px;
+  }
+}.u-section-3 .u-sheet-1 {
+  min-height: 2402px;
+}
+
+.u-section-3 .u-text-1 {
   margin: 32px auto 0 0;
 }
 
-.u-section-2 .u-accordion-1 {
+.u-section-3 .u-accordion-1 {
   margin-top: 22px;
   margin-bottom: 0;
 }
 
-.u-section-2 .u-accordion-link-1 {
+.u-section-3 .u-accordion-link-1 {
   font-weight: 700;
   padding: 20px 30px;
 }
 
-.u-section-2 .u-icon-1 {
+.u-section-3 .u-icon-1 {
   height: 20px;
   width: 20px;
   color: rgb(153, 153, 153) !important;
 }
 
-.u-section-2 .u-accordion-pane-1 {
+.u-section-3 .u-accordion-pane-1 {
   min-height: 150px;
 }
 
-.u-section-2 .u-container-layout-1 {
+.u-section-3 .u-container-layout-1 {
   padding: 20px 30px 78px;
 }
 
-.u-section-2 .u-accordion-link-2 {
+.u-section-3 .u-accordion-link-2 {
   font-weight: 700;
   padding: 20px 30px;
 }
 
-.u-section-2 .u-icon-2 {
+.u-section-3 .u-icon-2 {
   height: 20px;
   width: 20px;
   color: rgb(153, 153, 153) !important;
 }
 
-.u-section-2 .u-accordion-pane-2 {
+.u-section-3 .u-accordion-pane-2 {
   min-height: 150px;
 }
 
-.u-section-2 .u-container-layout-2 {
+.u-section-3 .u-container-layout-2 {
   padding: 20px 30px;
 }
 
-.u-section-2 .u-accordion-link-3 {
+.u-section-3 .u-accordion-link-3 {
   font-weight: 700;
   padding: 20px 30px;
 }
 
-.u-section-2 .u-icon-3 {
+.u-section-3 .u-icon-3 {
   height: 20px;
   width: 20px;
   color: rgb(153, 153, 153) !important;
 }
 
-.u-section-2 .u-accordion-pane-3 {
+.u-section-3 .u-accordion-pane-3 {
   min-height: 150px;
 }
 
-.u-section-2 .u-container-layout-3 {
+.u-section-3 .u-container-layout-3 {
   padding: 20px 30px;
 }
 
-.u-section-2 .u-accordion-link-4 {
+.u-section-3 .u-accordion-link-4 {
   font-weight: 700;
   padding: 20px 30px;
 }
 
-.u-section-2 .u-icon-4 {
+.u-section-3 .u-icon-4 {
   height: 20px;
   width: 20px;
   color: rgb(153, 153, 153);
 }
 
-.u-section-2 .u-accordion-pane-4 {
+.u-section-3 .u-accordion-pane-4 {
   min-height: 150px;
 }
 
-.u-section-2 .u-container-layout-4 {
+.u-section-3 .u-container-layout-4 {
   padding: 20px;
 }
 
-.u-section-2 .u-accordion-link-5 {
+.u-section-3 .u-accordion-link-5 {
   font-weight: 700;
   padding: 20px 30px;
 }
 
-.u-section-2 .u-icon-5 {
+.u-section-3 .u-icon-5 {
   height: 20px;
   width: 20px;
   color: rgb(153, 153, 153);
 }
 
-.u-section-2 .u-accordion-pane-5 {
+.u-section-3 .u-accordion-pane-5 {
   min-height: 150px;
 }
 
-.u-section-2 .u-container-layout-5 {
+.u-section-3 .u-container-layout-5 {
   padding: 20px;
 }
 
-.u-section-2 .u-accordion-link-6 {
+.u-section-3 .u-accordion-link-6 {
   font-weight: 700;
   padding: 20px 30px;
 }
 
-.u-section-2 .u-icon-6 {
+.u-section-3 .u-icon-6 {
   height: 20px;
   width: 20px;
   color: rgb(153, 153, 153);
 }
 
-.u-section-2 .u-accordion-pane-6 {
+.u-section-3 .u-accordion-pane-6 {
   min-height: 150px;
 }
 
-.u-section-2 .u-container-layout-6 {
+.u-section-3 .u-container-layout-6 {
   padding: 20px;
 }
 
-.u-section-2 .u-accordion-link-7 {
+.u-section-3 .u-accordion-link-7 {
   font-weight: 700;
   padding: 20px 30px;
 }
 
-.u-section-2 .u-icon-7 {
+.u-section-3 .u-icon-7 {
   height: 20px;
   width: 20px;
   color: rgb(153, 153, 153);
 }
 
-.u-section-2 .u-accordion-pane-7 {
+.u-section-3 .u-accordion-pane-7 {
   min-height: 150px;
 }
 
-.u-section-2 .u-container-layout-7 {
+.u-section-3 .u-container-layout-7 {
   padding: 20px;
 }
 
-.u-section-2 .u-accordion-link-8 {
+.u-section-3 .u-accordion-link-8 {
   font-weight: 700;
   padding: 20px 30px;
 }
 
-.u-section-2 .u-icon-8 {
+.u-section-3 .u-icon-8 {
   height: 20px;
   width: 20px;
   color: rgb(153, 153, 153);
 }
 
-.u-section-2 .u-accordion-pane-8 {
+.u-section-3 .u-accordion-pane-8 {
   min-height: 150px;
 }
 
-.u-section-2 .u-container-layout-8 {
+.u-section-3 .u-container-layout-8 {
   padding: 20px;
 }
 
-.u-section-2 .u-accordion-link-9 {
+.u-section-3 .u-accordion-link-9 {
   font-weight: 700;
   padding: 20px 30px;
 }
 
-.u-section-2 .u-icon-9 {
+.u-section-3 .u-icon-9 {
   height: 20px;
   width: 20px;
   color: rgb(153, 153, 153);
 }
 
-.u-section-2 .u-accordion-pane-9 {
+.u-section-3 .u-accordion-pane-9 {
   min-height: 150px;
 }
 
-.u-section-2 .u-container-layout-9 {
+.u-section-3 .u-container-layout-9 {
   padding: 20px;
 }
 
-.u-section-2 .u-accordion-link-10 {
+.u-section-3 .u-accordion-link-10 {
   font-weight: 700;
   padding: 20px 30px;
 }
 
-.u-section-2 .u-icon-10 {
+.u-section-3 .u-icon-10 {
   height: 20px;
   width: 20px;
   color: rgb(153, 153, 153);
 }
 
-.u-section-2 .u-accordion-pane-10 {
+.u-section-3 .u-accordion-pane-10 {
   min-height: 150px;
 }
 
-.u-section-2 .u-container-layout-10 {
+.u-section-3 .u-container-layout-10 {
   padding: 20px;
 }
 
-.u-section-2 .u-accordion-link-11 {
+.u-section-3 .u-accordion-link-11 {
   font-weight: 700;
   padding: 20px 30px;
 }
 
-.u-section-2 .u-icon-11 {
+.u-section-3 .u-icon-11 {
   height: 20px;
   width: 20px;
   color: rgb(153, 153, 153);
 }
 
-.u-section-2 .u-accordion-pane-11 {
+.u-section-3 .u-accordion-pane-11 {
   min-height: 150px;
 }
 
-.u-section-2 .u-container-layout-11 {
+.u-section-3 .u-container-layout-11 {
   padding: 20px;
 }
 
-.u-section-2 .u-btn-1 {
+.u-section-3 .u-btn-1 {
   background-image: none;
   font-size: 1.125rem;
   padding: 0;
 }
 
-.u-section-2 .u-accordion-link-12 {
+.u-section-3 .u-accordion-link-12 {
   font-weight: 700;
   padding: 20px 30px;
 }
 
-.u-section-2 .u-icon-12 {
+.u-section-3 .u-icon-12 {
   height: 20px;
   width: 20px;
   color: rgb(153, 153, 153);
 }
 
-.u-section-2 .u-accordion-pane-12 {
+.u-section-3 .u-accordion-pane-12 {
   min-height: 150px;
 }
 
-.u-section-2 .u-container-layout-12 {
+.u-section-3 .u-container-layout-12 {
   padding: 20px;
 }
 
-.u-section-2 .u-accordion-link-13 {
+.u-section-3 .u-accordion-link-13 {
   font-weight: 700;
   padding: 20px 30px;
 }
 
-.u-section-2 .u-icon-13 {
+.u-section-3 .u-icon-13 {
   height: 20px;
   width: 20px;
   color: rgb(153, 153, 153);
 }
 
-.u-section-2 .u-accordion-pane-13 {
+.u-section-3 .u-accordion-pane-13 {
   min-height: 150px;
 }
 
-.u-section-2 .u-container-layout-13 {
+.u-section-3 .u-container-layout-13 {
   padding: 20px;
 }
 
-.u-section-2 .u-accordion-link-14 {
+.u-section-3 .u-accordion-link-14 {
   font-weight: 700;
   padding: 20px 30px;
 }
 
-.u-section-2 .u-icon-14 {
+.u-section-3 .u-icon-14 {
   height: 20px;
   width: 20px;
   color: rgb(153, 153, 153);
 }
 
-.u-section-2 .u-accordion-pane-14 {
+.u-section-3 .u-accordion-pane-14 {
   min-height: 150px;
 }
 
-.u-section-2 .u-container-layout-14 {
+.u-section-3 .u-container-layout-14 {
   padding: 20px;
 }
 
-.u-section-2 .u-accordion-link-15 {
+.u-section-3 .u-accordion-link-15 {
   font-weight: 700;
   padding: 20px 30px;
 }
 
-.u-section-2 .u-icon-15 {
+.u-section-3 .u-icon-15 {
   height: 20px;
   width: 20px;
   color: rgb(153, 153, 153);
 }
 
-.u-section-2 .u-accordion-pane-15 {
+.u-section-3 .u-accordion-pane-15 {
   min-height: 150px;
 }
 
-.u-section-2 .u-container-layout-15 {
+.u-section-3 .u-container-layout-15 {
   padding: 20px;
 }
 
-.u-section-2 .u-accordion-link-16 {
+.u-section-3 .u-accordion-link-16 {
   font-weight: 700;
   padding: 20px 30px;
 }
 
-.u-section-2 .u-icon-16 {
+.u-section-3 .u-icon-16 {
   height: 20px;
   width: 20px;
   color: rgb(153, 153, 153);
 }
 
-.u-section-2 .u-accordion-pane-16 {
+.u-section-3 .u-accordion-pane-16 {
   min-height: 150px;
 }
 
-.u-section-2 .u-container-layout-16 {
+.u-section-3 .u-container-layout-16 {
   padding: 20px;
 }
 
-.u-section-2 .u-accordion-link-17 {
+.u-section-3 .u-accordion-link-17 {
   font-weight: 700;
   padding: 20px 30px;
 }
 
-.u-section-2 .u-icon-17 {
+.u-section-3 .u-icon-17 {
   height: 20px;
   width: 20px;
   color: rgb(153, 153, 153);
 }
 
-.u-section-2 .u-accordion-pane-17 {
+.u-section-3 .u-accordion-pane-17 {
   min-height: 150px;
 }
 
-.u-section-2 .u-container-layout-17 {
+.u-section-3 .u-container-layout-17 {
   padding: 20px;
 }
 
-.u-section-2 .u-accordion-link-18 {
+.u-section-3 .u-accordion-link-18 {
   font-weight: 700;
   padding: 20px 30px;
 }
 
-.u-section-2 .u-icon-18 {
+.u-section-3 .u-icon-18 {
   height: 20px;
   width: 20px;
   color: rgb(153, 153, 153);
 }
 
-.u-section-2 .u-accordion-pane-18 {
+.u-section-3 .u-accordion-pane-18 {
   min-height: 150px;
 }
 
-.u-section-2 .u-container-layout-18 {
+.u-section-3 .u-container-layout-18 {
   padding: 20px;
 }
 
-.u-section-2 .u-accordion-link-19 {
+.u-section-3 .u-accordion-link-19 {
   font-weight: 700;
   padding: 20px 30px;
 }
 
-.u-section-2 .u-icon-19 {
+.u-section-3 .u-icon-19 {
   height: 20px;
   width: 20px;
   color: rgb(153, 153, 153);
 }
 
-.u-section-2 .u-accordion-pane-19 {
+.u-section-3 .u-accordion-pane-19 {
   min-height: 150px;
 }
 
-.u-section-2 .u-container-layout-19 {
+.u-section-3 .u-container-layout-19 {
   padding: 20px;
 }
 
-.u-section-2 .u-accordion-link-20 {
+.u-section-3 .u-accordion-link-20 {
   font-weight: 700;
   padding: 20px 30px;
 }
 
-.u-section-2 .u-icon-20 {
+.u-section-3 .u-icon-20 {
   height: 20px;
   width: 20px;
   color: rgb(153, 153, 153);
 }
 
-.u-section-2 .u-accordion-pane-20 {
+.u-section-3 .u-accordion-pane-20 {
   min-height: 150px;
 }
 
-.u-section-2 .u-container-layout-20 {
+.u-section-3 .u-container-layout-20 {
   padding: 20px;
 }
 
-.u-section-2 .u-accordion-link-21 {
+.u-section-3 .u-accordion-link-21 {
   font-weight: 700;
   padding: 20px 30px;
 }
 
-.u-section-2 .u-icon-21 {
+.u-section-3 .u-icon-21 {
   height: 20px;
   width: 20px;
   color: rgb(153, 153, 153);
 }
 
-.u-section-2 .u-accordion-pane-21 {
+.u-section-3 .u-accordion-pane-21 {
   min-height: 150px;
 }
 
-.u-section-2 .u-container-layout-21 {
+.u-section-3 .u-container-layout-21 {
   padding: 20px;
 }
 
-.u-section-2 .u-accordion-link-22 {
+.u-section-3 .u-accordion-link-22 {
   font-weight: 700;
   padding: 20px 30px;
 }
 
-.u-section-2 .u-icon-22 {
+.u-section-3 .u-icon-22 {
   height: 20px;
   width: 20px;
   color: rgb(153, 153, 153);
 }
 
-.u-section-2 .u-accordion-pane-22 {
+.u-section-3 .u-accordion-pane-22 {
   min-height: 150px;
 }
 
-.u-section-2 .u-container-layout-22 {
+.u-section-3 .u-container-layout-22 {
   padding: 20px;
 }
 
-.u-section-2 .u-accordion-link-23 {
+.u-section-3 .u-accordion-link-23 {
   font-weight: 700;
   padding: 20px 30px;
 }
 
-.u-section-2 .u-icon-23 {
+.u-section-3 .u-icon-23 {
   height: 20px;
   width: 20px;
   color: rgb(153, 153, 153);
 }
 
-.u-section-2 .u-accordion-pane-23 {
+.u-section-3 .u-accordion-pane-23 {
   min-height: 150px;
 }
 
-.u-section-2 .u-container-layout-23 {
+.u-section-3 .u-container-layout-23 {
   padding: 20px;
 }
 
-.u-section-2 .u-accordion-link-24 {
+.u-section-3 .u-accordion-link-24 {
   font-weight: 700;
   padding: 20px 30px;
 }
 
-.u-section-2 .u-icon-24 {
+.u-section-3 .u-icon-24 {
   height: 20px;
   width: 20px;
   color: rgb(153, 153, 153);
 }
 
-.u-section-2 .u-accordion-pane-24 {
+.u-section-3 .u-accordion-pane-24 {
   min-height: 150px;
 }
 
-.u-section-2 .u-container-layout-24 {
+.u-section-3 .u-container-layout-24 {
   padding: 20px;
 }
 
-.u-section-2 .u-accordion-link-25 {
+.u-section-3 .u-accordion-link-25 {
   font-weight: 700;
   padding: 20px 30px;
 }
 
-.u-section-2 .u-icon-25 {
+.u-section-3 .u-icon-25 {
   height: 20px;
   width: 20px;
   color: rgb(153, 153, 153);
 }
 
-.u-section-2 .u-accordion-pane-25 {
+.u-section-3 .u-accordion-pane-25 {
   min-height: 150px;
 }
 
-.u-section-2 .u-container-layout-25 {
+.u-section-3 .u-container-layout-25 {
   padding: 20px;
 }
 
 @media (max-width: 991px) {
-  .u-section-2 .u-container-layout-1 {
+  .u-section-3 .u-container-layout-1 {
     padding-bottom: 30px;
   }
 }
 
 @media (max-width: 767px) {
-  .u-section-2 .u-container-layout-4 {
+  .u-section-3 .u-container-layout-4 {
     padding-left: 10px;
     padding-right: 10px;
   }
 
-  .u-section-2 .u-container-layout-5 {
+  .u-section-3 .u-container-layout-5 {
     padding-left: 10px;
     padding-right: 10px;
   }
 
-  .u-section-2 .u-container-layout-6 {
+  .u-section-3 .u-container-layout-6 {
     padding-left: 10px;
     padding-right: 10px;
   }
 
-  .u-section-2 .u-container-layout-7 {
+  .u-section-3 .u-container-layout-7 {
     padding-left: 10px;
     padding-right: 10px;
   }
 
-  .u-section-2 .u-container-layout-8 {
+  .u-section-3 .u-container-layout-8 {
     padding-left: 10px;
     padding-right: 10px;
   }
 
-  .u-section-2 .u-container-layout-9 {
+  .u-section-3 .u-container-layout-9 {
     padding-left: 10px;
     padding-right: 10px;
   }
 
-  .u-section-2 .u-container-layout-10 {
+  .u-section-3 .u-container-layout-10 {
     padding-left: 10px;
     padding-right: 10px;
   }
 
-  .u-section-2 .u-container-layout-11 {
+  .u-section-3 .u-container-layout-11 {
     padding-left: 10px;
     padding-right: 10px;
   }
 
-  .u-section-2 .u-container-layout-12 {
+  .u-section-3 .u-container-layout-12 {
     padding-left: 10px;
     padding-right: 10px;
   }
 
-  .u-section-2 .u-container-layout-13 {
+  .u-section-3 .u-container-layout-13 {
     padding-left: 10px;
     padding-right: 10px;
   }
 
-  .u-section-2 .u-container-layout-14 {
+  .u-section-3 .u-container-layout-14 {
     padding-left: 10px;
     padding-right: 10px;
   }
 
-  .u-section-2 .u-container-layout-15 {
+  .u-section-3 .u-container-layout-15 {
     padding-left: 10px;
     padding-right: 10px;
   }
 
-  .u-section-2 .u-container-layout-16 {
+  .u-section-3 .u-container-layout-16 {
     padding-left: 10px;
     padding-right: 10px;
   }
 
-  .u-section-2 .u-container-layout-17 {
+  .u-section-3 .u-container-layout-17 {
     padding-left: 10px;
     padding-right: 10px;
   }
 
-  .u-section-2 .u-container-layout-18 {
+  .u-section-3 .u-container-layout-18 {
     padding-left: 10px;
     padding-right: 10px;
   }
 
-  .u-section-2 .u-container-layout-19 {
+  .u-section-3 .u-container-layout-19 {
     padding-left: 10px;
     padding-right: 10px;
   }
 
-  .u-section-2 .u-container-layout-20 {
+  .u-section-3 .u-container-layout-20 {
     padding-left: 10px;
     padding-right: 10px;
   }
 
-  .u-section-2 .u-container-layout-21 {
+  .u-section-3 .u-container-layout-21 {
     padding-left: 10px;
     padding-right: 10px;
   }
 
-  .u-section-2 .u-container-layout-22 {
+  .u-section-3 .u-container-layout-22 {
     padding-left: 10px;
     padding-right: 10px;
   }
 
-  .u-section-2 .u-container-layout-23 {
+  .u-section-3 .u-container-layout-23 {
     padding-left: 10px;
     padding-right: 10px;
   }
 
-  .u-section-2 .u-container-layout-24 {
+  .u-section-3 .u-container-layout-24 {
     padding-left: 10px;
     padding-right: 10px;
   }
 
-  .u-section-2 .u-container-layout-25 {
+  .u-section-3 .u-container-layout-25 {
     padding-left: 10px;
     padding-right: 10px;
   }
-}.u-section-3 .u-sheet-1 {
+}.u-section-4 .u-sheet-1 {
   min-height: 875px;
 }
 
-.u-section-3 .u-text-1 {
+.u-section-4 .u-text-1 {
   margin: 41px auto 0 0;
 }
 
-.u-section-3 .u-text-2 {
+.u-section-4 .u-text-2 {
   font-size: 1rem;
   line-height: 3;
   margin: 23px 0 0;
 }
 
 @media (max-width: 767px) {
-  .u-section-3 .u-text-2 {
+  .u-section-4 .u-text-2 {
     margin-bottom: 60px;
   }
 }
