--- a/2024/nicepage.css
+++ b/2024/nicepage.css
@@ -51725,9 +51725,9 @@ blockquote {
 }
 
 .u-footer .u-image-6 {
-  width: 52px;
-  height: 33px;
-  margin: 29px 39px 0 auto;
+  width: 55px;
+  height: auto;
+  margin: 29px 39px -35px auto;
 }
 
 .u-footer .u-image-7 {
@@ -51773,9 +51773,9 @@ blockquote {
 }
 
 .u-footer .u-image-14 {
-  width: 45px;
-  height: 45px;
-  margin: -50px -10px 0 auto;
+  width: 55px;
+  height: auto;
+  margin: -60px -10px -10px auto;
 }
 
 .u-footer .u-image-15 {
