--- a/2024/Task1.css
+++ b/2024/Task1.css
@@ -5,16 +5,16 @@
 .u-section-1 .u-text-1 {
   margin: 60px auto;
 }.u-section-2 .u-sheet-1 {
-  min-height: 495px;
+  min-height: 100px;
 }
 
 .u-section-2 .u-text-1 {
-  margin: 56px 280px 0 60px;
+  margin: 10px auto 10px 10px;
 }
 
 .u-section-2 .u-text-2 {
   line-height: 2;
-  margin: 36px 60px 0;
+  margin: 36px 10px 10px;
 }
 
 @media (max-width: 1199px) {
